Added mouse event support and ported most of activity.js to three.js
Added mouse event support and ported most of activity.js to three.js.
Functions working fine are createMsg, create error

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     <script src="lib/p5.min.js"></script>
     <script src="lib/jquery-1.11.3.min.js"></script>
     <script src="lib/webL10n.js"></script>
+    <script src="lib/three.js"></script>
+    <script src="lib/helvetiker_regular.typeface.js"></script>
+
+
 
     <link rel="prefetch" type="application/l10n" href="./localization.ini" />
     <script data-main="js/loader" src="lib/require.js"> </script>
+
 
     <link rel="manifest" href="android_chrome_manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
@@ -101,6 +106,5 @@
     </div>
 
     <div id="helpElem"></div>
-
 </body>
 </html>
