Fixed the get 2D bounds and palette blocks event handlers

--- a/index.html
+++ b/index.html
@@ -102,5 +102,11 @@
     </div>
 
     <div id="helpElem"></div>
+    <div id="mousePositionIndicator">
+        mouseCoorX:<span id = "mouseCoorX">10</span><br/>
+        mouseCoorY:<span id = "mouseCoorY">20</span><br/>
+        threeCoorX:<span id = "threeCoorX">30</span><br/>
+        threeCoorY:<span id = "threeCoorY">40</span><br/>
+    </div>
 </body>
 </html>
