Reminder to add dependencies in require.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="lib/jquery-1.11.3.min.js"></script>
     <script src="lib/webL10n.js"></script>
 
-    <!-- FIX me, add the dependencies in require.js -->
+    <!-- FIXME, add the dependencies in require.js -->
     <script src="lib/three.js"></script>
     <script src="lib/helvetiker_regular.typeface.js"></script>
     <script src="lib/Tween.js"></script>
@@ -33,9 +33,6 @@
     <script type="text/javascript" src="./js/basicblocks.js"></script>
     <script type="text/javascript" src="./js/blockfactory.js"></script>
 
-
-
-    
 
     <link rel="prefetch" type="application/l10n" href="./localization.ini" />
     <script data-main="js/loader" src="lib/require.js"> </script>
