--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- FIXME, add the dependencies in require.js -->
     <script src="lib/three.js"></script>
     <script src="lib/helvetiker_regular.typeface.js"></script>
-    <script src="lib/Tween.js"></script>
+    <script src="lib/TweenLite.min.js"></script>
     
     <script type="text/javascript" src="./js/utils.js"></script>
     <script type="text/javascript" src="./js/artwork.js"></script>
